2001-03-06  Dave Peticolas  <dave@krondo.com>

	* src/scm/iso-4217-currencies.scm: remove duplicate currency
	fix colonial franc names

	* src/engine/sixtp-dom-parsers.c (dom_tree_to_commodity_ref): use
	gnc_commodity_destroy, not g_free.

	* src/guile/gnc.gwp: fix for new commodity insert

	* src/gnome/druid-qif-import.c: fix for new commodity insert

	* src/gnome/dialog-commodity.c: check for existing commodity.
	fix for new commodity insert.

	* src/engine/io-gncbin-r.c: fix for new commodity insert

	* src/gnome/druid-commodity.c: fix for new commodity insert

	* src/engine/gnc-commodity.c: change commodity insert semantics to
	use an existing commodity if present. Remove
	gnc_commodity_table_remove(). It wasn't used and was a mem leak.

	* src/engine/Commodity-xml-parser-v1.c
	(commodity_restore_end_handler): use gnc_commodity_destroy,
	not just g_free.

2001-03-05  Dave Peticolas  <dave@krondo.com>

	* src/register/gnome/gnucash-item-edit.{ch}: improve horizontal
	scrolling behavior.

2001-03-05  Christian Stimming  <stimming@tuhh.de>

	* src/scm/html-utilities.scm: reorganizing of the hierarchical
	reports: subtotals are now printed *below* the subaccounts instead
	of above.

2001-03-04  Dave Peticolas  <dave@krondo.com>

	* configure.in: define a new substitution GNC_PIXMAP_DIR for
	a pixmap directory. check for gal.

	* src/pixmaps/Makefile.am (gncpixmapdir): install in configured
	pixmap directory

	* src/gnc-dir.h.in (GNC_PIXMAP_DIR): define pixmap directory

	* src/Makefile.am (gnc-dir.h): configure pixmap directory
	for gnc-dir.h.in

	* src/gnome/dialog-utils.c (gnc_get_pixmap): use configured
	pixmap directory

	* src/engine/gnc-associate-account.c: fix some uses of glib
	list routines (they always return the new head of the list).

	* src/pixmaps: add gnucash_long.png graphic

	* src/gnome/top-level.c (gnucash_ui_init): show splash screen

	* src/gnome/gnc-splash.{ch}: splash screen functionality
